feat: Implementar RecipeController y pruebas para el controlador y servicio